--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:COWGeUc5TFxAnEVx5anJmUBr2e6Vse+Fm4OKnn1xv9Q=
+APP_KEY=base64:v7hoDwfl2RbBxpT1wPjE+6d2PMf/YxYI2d2Nns0oPRU=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
@@ -10,7 +10,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=project
 DB_USERNAME=root
-DB_PASSWORD=123456789
+DB_PASSWORD=1234
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
