--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,4 +2,4 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/qsak8yb73oyo/public_html/
-    - /bin/cp -R images $DEPLOYPATH
+    - /bin/cp index.html $DEPLOYPATH
