--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,8 +1,8 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/qsak8yb73oyo/public_html/
+    - export DEPLOYPATH=/home/qsak8yb73oyo/
     - /bin/cp -r * $DEPLOYPATH #copy all from root
-#    - /bin/cp -r ./public/* $DEPLOYPATH/public_html/
-    - /bin/cp ./public/js/*.js $DEPLOYPATH/public_html/js
-    - /bin/cp ./public/css/*.css $DEPLOYPATH/public_html/css
+    - /bin/cp -r ./public/* $DEPLOYPATH/public_html/
+#    - /bin/cp ./public/js/*.js $DEPLOYPATH/public_html/js
+#   - /bin/cp ./public/css/*.css $DEPLOYPATH/public_html/css
