--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,7 +2,7 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/qsak8yb73oyo/
-    - /bin/cp -r * $DEPLOYPATH #copy all from root
+#    - /bin/cp -r * $DEPLOYPATH #copy all from root
     - /bin/cp -r ./public/* $DEPLOYPATH/public_html/
 #    - /bin/cp ./public/js/*.js $DEPLOYPATH/public_html/js
 #   - /bin/cp ./public/css/*.css $DEPLOYPATH/public_html/css
